fixtures/frontend/milestone-2/valid/custom-source-provider-wakeup/main.aivi
fun step:Int x:Int current:Int =>
    x

provider custom.feed
    wakeup: providerTrigger

@source custom.feed
signal retryEvents : Signal Int

signal retried : Signal Int =
    retryEvents
     +|> 0 step
