fixtures/frontend/milestone-2/invalid/custom-source-recurrence-missing-wakeup/main.aivi
fun step #value =>
    value

@source custom.feed 0
sig broken : Signal Int =
    0
     @|> step
     <|@ step
